Create framework of splitter.

--- a/SequentialFrameSplitter/SequentialFrameSplitter.vcxproj
+++ b/SequentialFrameSplitter/SequentialFrameSplitter.vcxproj
@@ -151,7 +151,7 @@
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="utils.h" />
+    <ClInclude Include="optical_flow_judger.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SequentialFrameSplitter.cpp" />
@@ -161,7 +161,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="utils.cpp" />
+    <ClCompile Include="optical_flow_judger.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
