--- a/SequentialFrameSplitter/SequentialFrameSplitter.vcxproj.filters
+++ b/SequentialFrameSplitter/SequentialFrameSplitter.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="utils.h">
+    <ClInclude Include="optical_flow_judger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -32,7 +32,7 @@
     <ClCompile Include="SequentialFrameSplitter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="utils.cpp">
+    <ClCompile Include="optical_flow_judger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
